docs: update options table in configuration docs

--- a/docs/content/1.setup/2.configuration.md
+++ b/docs/content/1.setup/2.configuration.md
@@ -14,16 +14,16 @@ export default defineNuxtConfig({
 })
 ```
 
-| **Key**                      | **Type**   | **Default**           | **Description**                                                                                      |
-| ---------------------------- | ---------- | --------------------- | ---------------------------------------------------------------------------------------------------- |
-| `openAPITS`                  | `OpenAPITSOptions`   |                  | OpenAPI TS [options](https://openapi-ts.pages.dev/node/#options)                                |
-| `addPlugin`                  | `boolean`   |      `true`            | If enable default plugin to create fetch clients                                                   |
-| **Clients**                  |            |                       |                                                                                                      |
-| `clients.[client]`           | `OpenFetchClientOptions`   |                       | Client options                                                             |
-| `clients.[client].baseURL`      | `string`   |       | Base URL for the request.      |
-| `clients.[client].headers`      | `HeadersInit`   |       | Request headers.    |
-| `clients.[client].query`      | `SearchParameters`   |       | Adds query search params to URL   |
-| `clients.[client].schema`     | `OpenAPI3Schema`   |                       | Local or remote schema file (YAML or JSON)                                                  |
+| **Key**                    | **Type**                 | **Default** | **Description**                                           |
+|----------------------------|--------------------------|-------------|-----------------------------------------------------------|
+| `openAPITS`                | `OpenAPITSOptions`       |             | OpenAPI TS [options](https://openapi-ts.dev/node#options) |
+| `addPlugin`                | `boolean`                | `true`      | If enable default plugin to create fetch clients          |
+| **Clients**                |                          |             |                                                           |
+| `clients.[client]`         | `OpenFetchClientOptions` |             | Client options                                            |
+| `clients.[client].baseURL` | `string`                 |             | Base URL for the request.                                 |
+| `clients.[client].headers` | `HeadersInit`            |             | Request headers.                                          |
+| `clients.[client].query`   | `SearchParameters`       |             | Adds query search params to URL                           |
+| `clients.[client].schema`  | `OpenAPI3Schema`         |             | Local or remote schema file (YAML or JSON)                |
 
 Client can also be configured using `runtimeConfig` or environment variables:
 
