--- a/docs/content/2.composables/2.useLazy[Client].md
+++ b/docs/content/2.composables/2.useLazy[Client].md
@@ -3,9 +3,12 @@ title: "useLazy[Client]"
 description: "Generated fetch composable"
 ---
 
-Composables are generated for each OpenAPI client specified in the `openFetch` section of Nuxt config and provide a convenient wrapper around `useLazyFetch`.
+Composables are generated for each OpenAPI client specified in the `openFetch` section of Nuxt config and provide a convenient wrapper around [`useLazyFetch`][nuxt#useLazyFetch].
 
-It has the same API as Nuxt's [useLazyFetch](https://nuxt.com/docs/api/composables/use-lazy-fetch) composable with additional `path` option, which is used to replace params in the pathname.
+## Usage
+
+It has the same API as Nuxt's [`useLazyFetch`][nuxt#useLazyFetch] composable with additional `path` option, which is used to replace params in the pathname.
+For other options, see [additional parameters](#additional-parameters).
 
 ```vue twoslash
 // @noErrors
@@ -21,3 +24,29 @@ const { data } = useLazyPets('/pet/{petId}', {
   <h1>{{ data?.name }}</h1>
 </template>
 ```
+
+## Additional parameters
+
+In addition to the [`useLazyFetch`][nuxt#useLazyFetch] options, the composable accepts the following additional parameters:
+
+### `path`
+
+- **Type:** `Record<string, string | number>`
+
+The exact type of the `path` is generated from the OpenAPI schema for type safety and autocompletion.
+This option lets you replace the path parameters in the endpoint URL with the actual values.
+
+### `accept`
+
+- **Type:** `MediaType | MediaType[]`
+
+The exact type of the `accept` option is generated from the available response types in the OpenAPI schema.
+This option allows you to set the `Accept` header for the request and typeset the result type accordingly.
+
+::warning
+The value of the `accept` option will always override the `Accept` header sent by the underlying client, even if overridden in the `useLazyFetch` options.
+::
+
+For more examples, see [Response types](../advanced/response-types).
+
+[nuxt#useLazyFetch]: https://nuxt.com/docs/api/composables/use-fetch
