--- a/docs/content/3.utils/1.$[client].md
+++ b/docs/content/3.utils/1.$[client].md
@@ -3,11 +3,14 @@ title: "$[client]"
 description: "Generated fetch client"
 ---
 
-Cliens are generated for each OpenAPI client specified in the `openFetch` section of Nuxt config and provide a convenient wrapper around `$fetch`.
+Clients are generated for each OpenAPI client specified in the `openFetch` section of Nuxt config and provide a convenient wrapper around [`$fetch`][nuxt#$fetch].
+
+## Usage
 
 You can access clients from the Vue context using `useNuxtApp()`.
 
-It has the same API as Nuxt's [$fetch](https://nuxt.com/docs/api/utils/dollarfetch) util with additional `path` option, which is used to replace params in the pathname.
+It has the same API as Nuxt's [`$fetch`][nuxt#$fetch] util with an additional `path` option, which is used to replace params in the pathname.
+For other options, see [additional parameters](#additional-parameters).
 
 ```vue
 <script setup lang="ts">
@@ -38,3 +41,29 @@ export default defineEventHandler(async () => {
   })
 })
 ```
+
+## Additional parameters
+
+In addition to the [`$fetch`][nuxt#$fetch] options, the client accepts the following additional parameters:
+
+### `path`
+
+- **Type:** `Record<string, string | number>`
+
+The exact type of the `path` is generated from the OpenAPI schema for type safety and autocompletion.
+This option lets you replace the path parameters in the endpoint URL with the actual values.
+
+### `accept`
+
+- **Type:** `MediaType | MediaType[]`
+
+The exact type of the `accept` option is generated from the available response types in the OpenAPI schema.
+This option allows you to set the `Accept` header for the request and typeset the result type accordingly.
+
+::warning
+The value of the `accept` option will always override the `Accept` header sent by the client, even if overridden in the `$fetch` options.
+::
+
+For more examples, see [Response types](../advanced/response-types).
+
+[nuxt#$fetch]: https://nuxt.com/docs/api/utils/dollarfetch
