--- a/docs/content/4.advanced/4.response-types.md
+++ b/docs/content/4.advanced/4.response-types.md
@@ -7,7 +7,11 @@ By default, the client will expect the response types to be equivalent, independ
 as such if multiple response types are available, the client will return the union of all possible response types.
 
 This can become an issue for APIs which use media type versioning returning multiple response types based on the `Accept` header sent by the client.
-To handle this, the generated client composables and `$[client]` helper expose an additional `accept` option.
+To handle this, the generated client composables and `$[client]` helper expose an additional `accept` option with enhanced type inference.
+
+::warning
+The value of the `accept` option will always override the `Accept` header sent by the client, even if overridden in the `ofetch` options.
+::
 
 ## Example
 
@@ -70,5 +74,3 @@ const { data } = await usePets('/pet/{petId}', {
 })
 // typeof data.value = PetV1 | PetV2
 ```
-
-The value of the `accept` option will always override the `Accept` header sent by the client, even if overridden in the `ofetch` options.
