docs: properly mention how to use the runtime config (#107)
Closes #107

--- a/docs/content/1.setup/2.configuration.md
+++ b/docs/content/1.setup/2.configuration.md
@@ -25,30 +25,16 @@ export default defineNuxtConfig({
 | `clients.[client].query`   | `SearchParameters`       |             | Adds query search params to URL                           |
 | `clients.[client].schema`  | `OpenAPI3Schema`         |             | Local or remote schema file (YAML or JSON)                |
 
-Client can also be configured using `runtimeConfig` or environment variables:
+## Runtime configuration
 
-```ts twoslash [nuxt.config.ts]
-// @noErrors
-export default defineNuxtConfig({
-  openFetch: {
-    clients: {
-      pets: {} // The key should be specified as it is used to generate the client
-    }
-  },
-  runtimeConfig: {
-    public: {
-      openFetch: {
-        pets: {
-          schema: 'https://petstore3.swagger.io/api/v3/openapi.json',
-          baseURL: 'https://petstore3.swagger.io/api/v3/'
-        },
-      },
-    }
-  },
-})
-```
-or:
+All options, except `schema`, are automatically copied to the runtime config.
+
+::note
+You can access and modify these options at runtime using [`useRuntimeConfig()`](https://nuxt.com/docs/4.x/api/composables/use-runtime-config).
+::
+
+This is particularly useful for overriding settings with **environment variables**. For example:
+
 ```dotenv [.env]
-NUXT_PUBLIC_OPEN_FETCH_PETS_SCHEMA=https://petstore3.swagger.io/api/v3/openapi.json
 NUXT_PUBLIC_OPEN_FETCH_PETS_BASE_URL=https://petstore3.swagger.io/api/v3/
 ```
