docs: add bodySerializer option

--- a/docs/content/3.utils/1.$[client].md
+++ b/docs/content/3.utils/1.$[client].md
@@ -67,3 +67,26 @@ The value of the `accept` option will always override the `Accept` header sent b
 For more examples, see [Response types](../advanced/response-types).
 
 [nuxt#$fetch]: https://nuxt.com/docs/api/utils/dollarfetch
+
+### `bodySerializer`
+
+- Type: `(body: RequestBody) => any`
+
+Allows modifying the body before it gets used in the request. Mostly needed when
+working with `multipart/form-data`:
+
+```typescript
+const data = await $fetch('/pet', {
+  method: 'POST',
+  body: {
+    name: 'Doggie'
+  },
+  bodySerializer(body) {
+    const formData = new FormData()
+    for (const key in body) {
+      formData.append(key, body[key])
+    }
+    return formData
+  }
+})
+```
