--- a/docs/content/2.composables/2.useLazy[Client].md
+++ b/docs/content/2.composables/2.useLazy[Client].md
@@ -50,3 +50,26 @@ The value of the `accept` option will always override the `Accept` header sent b
 For more examples, see [Response types](../advanced/response-types).
 
 [nuxt#useLazyFetch]: https://nuxt.com/docs/api/composables/use-fetch
+
+### `bodySerializer`
+
+- Type: `(body: RequestBody) => any`
+
+Allows modifying the body before it gets used in the request. Mostly needed when
+working with `multipart/form-data`:
+
+```typescript
+const { data } = useLazyPets('/pet', {
+  method: 'POST',
+  body: {
+    name: 'Doggie'
+  },
+  bodySerializer(body) {
+    const formData = new FormData()
+    for (const key in body) {
+      formData.append(key, body[key])
+    }
+    return formData
+  }
+})
+```
